# tutor

./: .coveragerc  .gitignore  .gitlab-ci.yml  .hatch_build.py  .travis.yml  BUGFIX_REPORT.md  CHANGELOG-nightly.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.rst  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  PHASE2_COMPLETION_CN.md  QUICKSTART_CN.md  README.md  README.rst  SECURITY.md  SUMMARY.md  TESTING_GUIDE_CN.md  azure-pipelines-1.yml  azure-pipelines.yml  configure  docker-compose-android.yml  docker-compose-notes.yml  docker-compose-portainer.yml  docker-compose-scripts.yml  docker-compose-xqueue.yml  docker-compose.yml  github-release.py  pyproject.toml  setup-obsolete.py  setup.py  tutor.spec
.github/: CODEOWNERS  ISSUE_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: auto-add-to-project.yml  bump-version.yml  check-dependencies.yml  release.yml  smoke-k8s.yml  smoke.yml  sync.yml  test.yml
.rmv/config/: db.mvbasic.json  log4j2.properties
android/: .gitignore  Dockerfile  Makefile
android/templates/: edx.properties  gradle.properties  tutor.yaml
changelog.d/: 20221124_161803_regis_HEAD.md  20221124_162326_regis.md  20221124_172610_regis_nightly.md  20221128_091915_regis_fix_jinja_min_version.md  20221128_100809_regis_mongodb_ssl.md  20221128_111113_regis_fix_docker_openedx_dev_version.md  20221128_122211_regis.md  20221129_083631_regis_sec_drag_n_drop.md  20221201_114916_regis_sec_jwt_token_rotation.md  20221207_071139_maria.grimaldi_fix_problem_templates.md  20221212_232925_regis_upgrade_from_nutmeg.md  20221212_235220_regis_fix_parameters_to_generic.md  20221213_083234_regis_dev.md  20221213_090356_regis_dev.md  20221213_102202_regis_dev.md  20221213_131305_regis_no_quickstart.md  20221213_163837_regis_backfill_persistent_grades.md  20230103_165634_regis_plugin_indices.md  20230106_163518_regis_fix_example_com_links.md  20230106_190620_regis_hooks_api.md  20230109_100009_codewithemad_upgrade_mysql_issue.md  20230109_134927_regis_fix_tinymce_formatting.md  20230110_130740_cmuniz_built_in_generic_types.md  20230117_165024_regis_cors_whitelist.md  20230130_112932_regis_overridable_caddy_max_upload.md  20230209_092607_regis_sec_lti.md  20230210_104512_regis_olive_2.md  20230214_105510_keith_fix_jobs_merge.md  20230307_132140_maria.grimaldi_fix_transcripts.md  20230308_090007_maria.magallanes_listing_patches.md  20230310_021412_moises.gonzalez_configurable_uwsgi.md  20230310_045537_moises.gonzalez_fix_k8s_uwsgi_workers.md  20230313_110919_kdmc_mounted_init.md  20230313_163654_kdmc_dev_image_for_dev_do.md  20230313_163942_regis_docker_optimize.md  20230313_172348_regis_docker_optimize.md  20230313_180716_regis_docker_optimize.md  20230316_094112_regis_better_highlight_enabled_plugins.md  20230316_113639_regis_fix_yaml_patch_ordering.md  20230320_213439_regis_fix_ora2_directory.md  (+222 more)
changelog.d/scriv/: entry_title.md.j2  github_release.md.j2  new_fragment.md.j2
cloud/: aws.sh  clean.sh  ubuntu.sh
configurator/: Dockerfile
configurator/templates/: Makefile.env
data/: .gitignore
deploy/: Makefile
deploy/k8s/: .gitignore  Makefile  admin.yml  namespace.yml
deploy/local/: Makefile
deploy/singleserver/: .gitignore  Makefile
docs/: CONFIGURATION_ABSTRACTION_CN.md  DESIGN_DECISIONS_CN.md  MULTI_ENV_CONFIG_CN.md  Makefile  NACOS_CONFIG_MANAGEMENT_CN.md  _release_description.md  analytics.rst  cli.rst  cli_download.rst  conf.py  configuration.rst  customise.rst  deployment.rst  dev.rst  edops-cli.md  extra.rst  faq.rst  gettingstarted.rst  howtutorworks.rst  index.rst  install.rst  intro.rst  k8s.rst  local.rst  missing.rst  mobile.rst  options.rst  plugins.rst  podman.rst  quickstart.rst  reference.rst  release.md  requirements.rst  run.rst  step.rst  testimonials.rst  troubleshooting.rst  tutor.rst  tutorials.rst  uninstallation.rst  (+4 more)
docs/_ext/: tutordocs.py
docs/concepts/: openedx.rst  tutor.rst
docs/debugger/: index.rst  intellij.rst
docs/developing/: custom-translations.rst  main.rst  openedx.rst  themes.rst
docs/download/: binary.rst  pip.rst
docs/gettingstarted/: installation.rst  quickstart.rst  requirements.rst  whatsnext.rst
docs/plugins/: api.rst  examples.rst  gettingstarted.rst  index.rst  intro.rst
docs/reference/: index.rst  indexes.rst  patches.rst
docs/reports/: BUGFIX_REPORT.md  IMPLEMENTATION_SUMMARY.md  LOCALIZATION_SUMMARY_CN.md  PHASE2_COMPLETION_CN.md  README.md
docs/sysadmin/: arm64.rst  edx-platform.rst  index.rst  multiplatforms.rst  oldreleases.rst  podman.rst  proxy.rst
docs/testing/: index.rst  platformtests.rst  smoketests.rst
docs/tutorials/: arm64.rst  datamigration.rst  edge.rst  edx-platform-settings.rst  edx-platform.rst  google-smtp.rst  index.rst  main.rst  multiplatforms.rst  next.rst  nightly.rst  oldreleases.rst  plugin.rst  podman.rst  portainer.rst  proxy.rst  scale.rst  theming.rst  windows.rst
edxapp/: Dockerfile  docker-entrypoint.sh  wait-for-greenlight.sh  wait-for-mysql.sh
edxapp/config/: cms.auth.json  cms.auth.json.templ  cms.env.json  cms.env.json.templ  (+5 more)
forum/: Dockerfile
lms/: Dockerfile  lms.env.json  production.py
nginx/: Dockerfile  lms.conf
notes/: Architecture.ipynb  DevSetup.ipynb  Dockerfile  Solution.ipynb  readme.md
openedx/: Dockerfile  docker-entrypoint.sh
requirements/: base.in  base.txt  dev.in  dev.txt  docs.in  docs.txt  plugins.in  plugins.txt
tests/: __init__.py  helpers.py  openedx-lms-common-settings  test.py  test_bindmount.py  test_bindmounts.py  test_config.py  test_env.py  test_images.py  test_jobs.py  test_plugin_indexes.py  test_plugins.py  test_plugins_v0.py  test_scripts.py  test_serialize.py  test_utils.py
tutor/: __about__.py  android.py  bindmount.py  bindmounts.py  cli.py  conf_for_treehouses.py  config.py  dev.py  env.py  exceptions.py  fmt.py  images.py  interactive.py  jobs.py  k8s.py  local.py  ops.py  opts.py  plugins.py  scripts.py  serialize.py  tasks.py  types.py  ui.py  utils.py  webui.py
tutor-openedx/: README.rst  setup.py
xqueue/: Dockerfile
(+359 files in other folders)
