# https://packaging.python.org/en/latest/tutorials/packaging-projects/
# https://hatch.pypa.io/latest/config/build/

[project]
name = "tutor"
license = {text = "AGPL-3.0-only"}
authors = [
  {name = "Edly"}, { email = "hello@edly.io"}
]
description = "The Docker-based Open edX distribution designed for peace of mind"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">= 3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
# these fields will be set by hatch_build.py
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.scripts]
tutor = "tutor.commands.cli:main"

# https://packaging.python.org/en/latest/specifications/well-known-project-urls/#well-known-labels
[project.urls]
Homepage = "https://docs.tutor.edly.io/"
Documentation = "https://docs.tutor.edly.io/"
Source = "https://github.com/overhangio/tutor"
Issues = "https://github.com/overhangio/tutor/issues"
Changelog = "https://github.com/overhangio/tutor/blob/master/CHANGELOG.md"
Community = "https://discuss.openedx.org/tag/tutor"

# hatch-specific configuration
[tool.hatch.metadata.hooks.custom]
path = ".hatch_build.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
# Disable strict naming, otherwise twine is not able to detect name/version
strict-naming = false
include = [
  "/tutor",
  "requirements/base.in",
  "requirements/plugins.txt",
  "requirements/dev.txt",
  "LICENSE.txt",
  ".hatch_build.py",
]
exclude = [
  "tests*",
  "venv*"
]

[tool.hatch.metadata]
# Allow github dependencies in plugins.txt
allow-direct-references = true

[tool.ruff]
exclude = ["templates", "docs/_ext"]

[tool.ruff.lint]
# E: pycodestyle errors
# I: isort
# N: pep8-naming
select = ["E", "I", "N"]

# F401: unused-import
# F841: unused-variable
# F541: f-string without interpolation
# W292: missing-newline-at-end-of-file
extend-select = ["F401", "F841", "F541", "W292"]

# TODO: Re-enable E501 (line too long) after fixing the ~250 violating lines.
# It’s currently disabled to keep this PR easy to review.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Ignore F401 (unused import) because init files usually import modules to initialize.
"**/__init__.py" = ["F401"]

[tool.ruff.format]
